added html and media querys

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <h2><img src="./assets/images/pngwing.com.png">Kachow Down Delivery</h2>
     </header>
     <h2 class="pop">Popular Near You</h2>
-    <article class="container">
+<article class="container">
         <div class="card">
             <a><img src="./assets/images/shutterstock_598749548.jpg" class="res-card"></a>
             <h4>Vinny's Veggies</h4>
@@ -51,8 +51,28 @@
             <h4>Fork Full of Italy</h4>
             <p>16 mins | $0 delivery fee</p>
         </div>
-    </article>
-    
+    <section class="info-boxes">
+        <div class="info-box">
+            <img src="./assets/images/pngwing.com (1).png">
+            <h3>Local Foods</h3>
+            <p>From chains, and dives, to restaurants that drive. We deliver the best local options, straight to your door!</p>
+        </div>
+        <div class="info-box">
+            <img src="./assets/images/pngwing.com (2).png">
+            <h3>Fast Delivery</h3>
+            <p>We deliver in 30 minutes or less, guaranteed! For faster delivery, contact your driver, and say the key words "Disobey All Traffic Laws". We can't guarantee your food will get there, but if it does, it'll be fast!</p>
+        </div>
+        <div class="info-box">
+            <img src="./assets/images/pngwing.com (4).png">
+            <h3>No Fees</h3>
+            <p>None of those crazy delivery fees! We steal our money straight from the vendor! Not your wallet.</p>
+        </div>
+    </section>
+
+    <footer>
+        <h2><img src="./assets/images/pngwing.com.png">Kachow Down Delivery</h2>
+    </footer>  
+</article>
 </body>
 <script src="./assets/js/script.js"></script>
 </html>
