Changed the image paths to cdn links for faster loading and deleted redundant images and image folders

--- a/veggy.html
+++ b/veggy.html
@@ -22,7 +22,7 @@
     </header>
 
     <section class="main-res-info">
-        <img src="./assets/images/veggy-images/pexels-wendy-wei-1656663.jpg">
+        <img src="https://ik.imagekit.io/liamallen34/Kachow_Images/pexels-wendy-wei-1656663.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668619835914">
         <div class="main-res-info-header">
             <h2>Vinny's Veggies</h2>
             <p>Vinny's Veggies | 4.3 <img src="./assets/images/star-grey-th.png"> | 10.0 mi | $$</p>
