fixed some of the styling issues on the restaurant pages

--- a/Italy.html
+++ b/Italy.html
@@ -75,12 +75,15 @@
                         grade
                         </span><span class="material-symbols-outlined">
                             grade
-                            </span></h6>
+                            </span>
+                            <span class="material-symbols-outlined">
+                                grade
+                                </span></h6>
             <p>Best food I have had in a while!</p>
         </div>
     </section>
 
-    <section class="available-items">
+    <section class="available-items pb-[250px]">
         <h3 class="relative top-[-30px] font-Bree text-[40px] ml-[14%] underline">Available Items</h3>
         <article id="foods" class="flex flex-wrap justify-evenly mx-[10%] shrink">
         <div class="w-[450px] h-[400px] mx-auto rounded-xl">
@@ -89,7 +92,7 @@
             <p class="relative top-[10px] left-2 text-[20px]">$23.99</p>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110 rotate-90" src="https://ik.imagekit.io/wpr8ctmq9/Italian_Food/images.jfif?ik-sdk-version=javascript-1.4.3&updatedAt=1668741876201">
+            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/wpr8ctmq9/Italian_Food/images.jfif?ik-sdk-version=javascript-1.4.3&updatedAt=1668741876201">
             <h4 class="text-[25px] relative top-4 left-2 font-Bree">Chicken Scallopine</h4>
             <p class="relative top-[10px] left-2 text-[20px]">$27.99</p>
         </div>
@@ -114,10 +117,11 @@
             <p class="relative top-[10px] left-2 text-[20px]">$4 per scoop</p>
         </div>
     </article>
-    </section>
-    <footer class="absolute bottom-[-140%] text-center mt-[50px] h-52 font-Bree w-full bg-[#1f1d1d] text-5xl">
-        <h2 class="mt-[50px] text-white italic"><img class="relative h-[30px] invert left-[34%] top-[41px]" src="./assets/images/pngwing.com.png">Kachow Down Delivery</h2>
+
+    <footer class="absolute text-center h-[200px] mt-[75px] font-Bree w-full bg-[#1f1d1d] text-5xl">
+        <h2 class="inline-block absolute left-[37%] top-[35%] text-white italic"><img class="absolute left-[-50px] bottom-2 h-[30px] invert" src="./assets/images/pngwing.com.png">Kachow Down Delivery</h2>
     </footer>
+    </section>
 
     
 </body>
