--- a/Seafood.html
+++ b/Seafood.html
@@ -62,11 +62,10 @@
           Captain Cliffs Fresh Seafoods
         </h2>
         <p class="font-bold text-info-grey relative left-[-5px]">
-          Captain Cliffs Fresh Seafoods | 8.0 mi | $$ | 4.7
+          Captain Cliffs Fresh Seafoods | 8.0 mi | $$$ | 4.7
           <img
-            class="w-3 h-3 absolute right-[-15px] bottom-[7px]"
-            src="./assets/images/star-grey-th.png"
-          />
+            class="w-3 h-3 absolute bottom-[7px] right-[68px]"
+            src="./assets/images/star-grey-th.png">
         </p>
       </div>
       <div
@@ -91,27 +90,26 @@
       >
         <h5 class="text-[22px] font-Bree">Calvin P.</h5>
         <h6 class="mb-[5px] text-[14px]">
-          <span class="material-symbols-outlined"> grade </span
-          ><span class="material-symbols-outlined"> grade </span
-          ><span class="material-symbols-outlined"> grade </span
-          ><span class="material-symbols-outlined"> grade </span
-          ><span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
         </h6>
-        <p>Captain Cliffs Fresh Seafoods.Five stars.</p>
+        <p>Captain Cliffs Fresh Seafoods. Five stars.</p>
       </div>
       <div
         class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md"
       >
         <h5 class="text-[22px] font-Bree">Mauren K</h5>
         <h6>
-          <span class="material-symbols-outlined"> grade </span
-          ><span class="material-symbols-outlined"> grade </span
-          ><span class="material-symbols-outlined"> grade </span
-          ><span class="material-symbols-outlined"> grade </span
-          ><span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
         </h6>
         <p>
-          The food was delicious and well priced.I especially enjoyed the
+          The food was delicious and well priced. I especially enjoyed the
           Classic Filet Oscar.
         </p>
       </div>
@@ -120,10 +118,11 @@
       >
         <h5 class="text-[22px] font-Bree">Daniel I A.</h5>
         <h6>
-          <span class="material-symbols-outlined"> grade </span
-          ><span class="material-symbols-outlined"> grade </span
-          ><span class="material-symbols-outlined"> grade </span
-          ><span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
+          <span class="material-symbols-outlined"> grade </span>
         </h6>
         <p>
           Some of the absolute best seafood we have had since not living in a
@@ -196,16 +195,10 @@
           <p class="relative top-[10px] left-2 text-[20px]">$43 lb</p>
         </div>
       </article>
-    </section>
-    <footer
-      class="absolute bottom-[-140%] text-center mt-[50px] h-52 font-Bree w-full bg-[#1f1d1d] text-5xl"
-    >
-      <h2 class="mt-[50px] text-white italic">
-        <img
-          class="relative h-[30px] invert left-[34%] top-[41px]"
-          src="./assets/images/pngwing.com.png"
-        />Kachow Down Delivery
-      </h2>
+      <footer class="absolute text-center h-[200px] mt-[75px] font-Bree w-full bg-[#1f1d1d] text-5xl">
+        <h2 class="inline-block absolute left-[37%] top-[35%] text-white italic"><img class="absolute left-[-50px] bottom-2 h-[30px] invert" src="./assets/images/pngwing.com.png">Kachow Down Delivery</h2>
     </footer>
+    </section>
+    
   </body>
 </html>
