--- a/veggy.html
+++ b/veggy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="w-full m-0 p-0">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./dist/output.css">
     <title>Vinny's Veggies</title>
 </head>
-<body>
+<body  class="w-full m-0 p-0 relative">
     <header class="fixed flex top-0 w-full h-[75px] bg-header-grey border-b-2 border-off-white z-[1]">
         <a href="./index.html"><h1 class="font-Bree italic mt-[15px] mr-[75px] ml-[55px] text-white text-4xl"><img class="h-5 invert absolute top-[26px] left-5"src="./assets/images/pngwing.com.png">Kachow Down Delivery</h1></a>
         <a class="address font-Roboto text-[18px] mt-7 text-white hover:cursor-pointer">Address<span class="relative left-[5px] bottom-[6px]">&#8964;</span></a>
@@ -80,9 +80,9 @@
         </div>
     </section>
 
-    <section class="available-items">
+    <section class="available-items pb-[250px]">
         <h3 class="relative top-[-30px] font-Bree text-[40px] ml-[14%] underline">Available Items</h3>
-        <article id="foods" class="flex flex-wrap justify-evenly mx-[10%] shrink">
+        <article id="foods" class="flex flex-wrap justify-evenly shrink w-full px-[10%]">
         <div class="w-[450px] h-[400px] mx-auto rounded-xl">
             <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/liamallen34/Kachow_Images/shutterstock_271030664.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668723789056">
             <h4 class="text-[25px] relative top-4 left-2 font-Bree">Chicken Salad</h4>
@@ -114,11 +114,11 @@
             <p class="relative top-[10px] left-2 text-[20px]">$3 per</p>
         </div>
     </article>
-    </section>
-    <footer class="absolute bottom-[-140%] text-center mt-[50px] h-52 font-Bree w-full bg-[#1f1d1d] text-5xl">
-        <h2 class="mt-[50px] text-white italic"><img class="relative h-[30px] invert left-[34%] top-[41px]" src="./assets/images/pngwing.com.png">Kachow Down Delivery</h2>
+
+    <footer class="absolute bottom-0 text-center mt-[200px] h-[200px] font-Bree w-full bg-[#1f1d1d] text-5xl">
+        <h2 class="inline-block absolute left-[37%] top-[35%] text-white italic"><img class="absolute left-[-50px] bottom-2 h-[30px] invert" src="./assets/images/pngwing.com.png">Kachow Down Delivery</h2>
     </footer>
 
-    
+</section>
 </body>
 </html>
