Added more html elements ie: buttons, and changed some paths

--- a/Italy.html
+++ b/Italy.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header class="fixed flex top-0 w-full h-[75px] bg-header-grey border-b-2 border-off-white z-[1]">
-        <a href="./index.html"><h1 class="font-Bree italic mt-[15px] mr-[75px] ml-[55px] text-white text-4xl"><img class="h-5 invert absolute top-[26px] left-5"src="./assets/images/pngwing.com.png">Kachow Down Delivery</h1></a>
+        <a href="./main.html"><h1 class="font-Bree italic mt-[15px] mr-[75px] ml-[55px] text-white text-4xl"><img class="h-5 invert absolute top-[26px] left-5"src="./assets/images/pngwing.com.png">Kachow Down Delivery</h1></a>
         <a class="address font-Roboto text-[18px] mt-7 text-white hover:cursor-pointer">Address<span class="relative left-[5px] bottom-[6px]">&#8964;</span></a>
         <button class="absolute right-[100px] top-5 h-[35px] w-[80px] bg-white rounded-[30px] border-none"><span class="material-symbols-outlined relative top-0.5">
             shopping_cart
@@ -86,35 +86,41 @@
     <section class="available-items pb-[250px]">
         <h3 class="relative top-[-30px] font-Bree text-[40px] ml-[14%] underline">Available Items</h3>
         <article id="foods" class="flex flex-wrap justify-evenly mx-[10%] shrink">
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/wpr8ctmq9/Italy/Good_Braciole.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668738773921">
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/wpr8ctmq9/Italy/Good_Braciole.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668738773921">
             <h4 class="text-[25px] relative top-4 left-2 font-Bree">Braciole</h4>
             <p class="relative top-[10px] left-2 text-[20px]">$23.99</p>
+            <button class="relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/wpr8ctmq9/Italian_Food/images.jfif?ik-sdk-version=javascript-1.4.3&updatedAt=1668741876201">
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/wpr8ctmq9/Italian_Food/images.jfif?ik-sdk-version=javascript-1.4.3&updatedAt=1668741876201">
             <h4 class="text-[25px] relative top-4 left-2 font-Bree">Chicken Scallopine</h4>
             <p class="relative top-[10px] left-2 text-[20px]">$27.99</p>
+            <button class="relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/wpr8ctmq9/Italian_Food/Screen_Shot_2022-05-05_at_6.26.34_PM.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668741081699">
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/wpr8ctmq9/Italian_Food/Screen_Shot_2022-05-05_at_6.26.34_PM.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668741081699">
             <h4 class="text-[25px] relative top-4 left-2 font-Bree">Italian Casserole</h4>
             <p class="relative top-[10px] left-2 text-[20px]">$24.99</p>
+            <button class="relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/wpr8ctmq9/Italy/Italian_Meatloaf.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668740032630">
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/wpr8ctmq9/Italy/Italian_Meatloaf.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668740032630">
             <h4 class="text-[25px] relative top-4 left-2 font-Bree">Italian Meatloaf</h4>
             <p class="relative top-[10px] left-2 text-[20px]">19.99</p>
+            <button class="relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/wpr8ctmq9/Italy/chicken_tetrazzini.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668740032038">
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/wpr8ctmq9/Italy/chicken_tetrazzini.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668740032038">
             <h4 class="text-[25px] relative top-4 left-2 font-Bree">Chicken Tetrazzini</h4>
             <p class="relative top-[10px] left-2 text-[20px]">$5 lb</p>
+            <button class="relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/wpr8ctmq9/Italian_Food/SAVJW_District_Gelato_Gelato-scaled.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668741082405">
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer " src="https://ik.imagekit.io/wpr8ctmq9/Italian_Food/SAVJW_District_Gelato_Gelato-scaled.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668741082405">
             <h4 class="text-[25px] relative top-4 left-2 font-Bree">Gelato</h4>
             <p class="relative top-[10px] left-2 text-[20px]">$4 per scoop</p>
+            <button class="relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
     </article>
 
@@ -123,6 +129,8 @@
     </footer>
     </section>
 
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="./assets/js/script.js"></script>
     
 </body>
 </html>
