--- a/Seafood.html
+++ b/Seafood.html
@@ -25,7 +25,7 @@
     <header
       class="fixed flex top-0 w-full h-[75px] bg-header-grey border-b-2 border-off-white z-[1]"
     >
-      <a href="./index.html"
+      <a href="./main.html"
         ><h1
           class="font-Bree italic mt-[15px] mr-[75px] ml-[55px] text-white text-4xl"
         >
@@ -136,69 +136,78 @@
         Available Items
       </h3>
       <article id="foods" class="flex flex-wrap justify-evenly mx-[10%] shrink">
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
           <img
-            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110"
+            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer "
             src="https://ik.imagekit.io/tsoc7yrwg/oysters-on-the-half-shell-with-habanero-tomato-mignonette-91699-1.jpeg?ik-sdk-version=javascript-1.4.3&updatedAt=1668737782092"
           />
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             Oysters on the 1/2 Shell
           </h4>
           <p class="relative top-[10px] left-2 text-[20px]">$48.99</p>
+          <button class="relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
           <img
-            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110"
+            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer "
             src="https://ik.imagekit.io/tsoc7yrwg/Lobster-Bisque.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668738220430"
           />
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             Lobster Bisque
           </h4>
           <p class="relative top-[10px] left-2 text-[20px]">$31.99 8 OZ.</p>
+          <button class="relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
           <img
-            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110"
+            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer "
             src="https://ik.imagekit.io/tsoc7yrwg/quick-pan-fried-tilapia-8.webp?ik-sdk-version=javascript-1.4.3&updatedAt=1668739190003"
           />
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             Tilapia Fillet
           </h4>
           <p class="relative top-[10px] left-2 text-[20px]">$27.99 12OZ.</p>
+          <button class="relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
           <img
-            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110"
+            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer "
             src="https://ik.imagekit.io/tsoc7yrwg/bigstock-Traditional-barbecue-Italian-b-219791728.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668738223532"
           />
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             Black Mussels
           </h4>
           <p class="relative top-[10px] left-2 text-[20px]">$36 lb</p>
+          <button class="relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
           <img
-            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110"
+            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer "
             src="https://ik.imagekit.io/tsoc7yrwg/Nashville-green-hills-office-space-crawfish-virtual-office.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668738218508"
           />
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">Crawfish</h4>
           <p class="relative top-[10px] left-2 text-[20px]">$25 lb</p>
+          <button class="relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
           <img
-            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110"
+            class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer "
             src="https://ik.imagekit.io/tsoc7yrwg/71fyzHAOcJL.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668738878290"
           />
           <h4 class="text-[25px] relative top-4 left-2 font-Bree">
             King Crab Legs
           </h4>
           <p class="relative top-[10px] left-2 text-[20px]">$43 lb</p>
+          <button class="relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
       </article>
       <footer class="absolute text-center h-[200px] mt-[75px] font-Bree w-full bg-[#1f1d1d] text-5xl">
         <h2 class="inline-block absolute left-[37%] top-[35%] text-white italic"><img class="absolute left-[-50px] bottom-2 h-[30px] invert" src="./assets/images/pngwing.com.png">Kachow Down Delivery</h2>
     </footer>
     </section>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="./assets/js/script.js"></script>
     
   </body>
 </html>
