--- a/veggy.html
+++ b/veggy.html
@@ -14,7 +14,7 @@
 </head>
 <body  class="w-full m-0 p-0 relative">
     <header class="fixed flex top-0 w-full h-[75px] bg-header-grey border-b-2 border-off-white z-[1]">
-        <a href="./index.html"><h1 class="font-Bree italic mt-[15px] mr-[75px] ml-[55px] text-white text-4xl"><img class="h-5 invert absolute top-[26px] left-5"src="./assets/images/pngwing.com.png">Kachow Down Delivery</h1></a>
+        <a href="./main.html"><h1 class="font-Bree italic mt-[15px] mr-[75px] ml-[55px] text-white text-4xl"><img class="h-5 invert absolute top-[26px] left-5"src="./assets/images/pngwing.com.png">Kachow Down Delivery</h1></a>
         <a class="address font-Roboto text-[18px] mt-7 text-white hover:cursor-pointer">Address<span class="relative left-[5px] bottom-[6px]">&#8964;</span></a>
         <button class="absolute right-[100px] top-5 h-[35px] w-[80px] bg-white rounded-[30px] border-none"><span class="material-symbols-outlined relative top-0.5">
             shopping_cart
@@ -83,35 +83,41 @@
     <section class="available-items pb-[250px]">
         <h3 class="relative top-[-30px] font-Bree text-[40px] ml-[14%] underline">Available Items</h3>
         <article id="foods" class="flex flex-wrap justify-evenly shrink w-full px-[10%]">
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/liamallen34/Kachow_Images/shutterstock_271030664.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668723789056">
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform" src="https://ik.imagekit.io/liamallen34/Kachow_Images/shutterstock_271030664.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668723789056">
             <h4 class="text-[25px] relative top-4 left-2 font-Bree">Chicken Salad</h4>
             <p class="relative top-[10px] left-2 text-[20px]">$18.99</p>
+            <button class="relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/liamallen34/Kachow_Images/download__15_.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668723797884">
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer" src="https://ik.imagekit.io/liamallen34/Kachow_Images/download__15_.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668723797884">
             <h4 class="text-[25px] relative top-4 left-2 font-Bree">House Salad</h4>
             <p class="relative top-[10px] left-2 text-[20px]">$12.99</p>
+            <button class="relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/liamallen34/Kachow_Images/shutterstock_1408706525.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668723789029">
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer" src="https://ik.imagekit.io/liamallen34/Kachow_Images/shutterstock_1408706525.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668723789029">
             <h4 class="text-[25px] relative top-4 left-2 font-Bree">Shrimp Salad</h4>
             <p class="relative top-[10px] left-2 text-[20px]">$17.99</p>
+            <button class="relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/liamallen34/Kachow_Images/pexels-pixabay-533236.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668619835863">
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer" src="https://ik.imagekit.io/liamallen34/Kachow_Images/pexels-pixabay-533236.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668619835863">
             <h4 class="text-[25px] relative top-4 left-2 font-Bree">Farm Fresh Tomatoes</h4>
             <p class="relative top-[10px] left-2 text-[20px]">$6 lb</p>
+            <button class="relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/liamallen34/Kachow_Images/pexels-mali-maeder-143133.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668619836183">
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer" src="https://ik.imagekit.io/liamallen34/Kachow_Images/pexels-mali-maeder-143133.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668619836183">
             <h4 class="text-[25px] relative top-4 left-2 font-Bree">Ripe From the Ground Carrots</h4>
             <p class="relative top-[10px] left-2 text-[20px]">$5 lb</p>
+            <button class="relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
-        <div class="w-[450px] h-[400px] mx-auto rounded-xl">
-            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer transition transform hover:scale-110" src="https://ik.imagekit.io/liamallen34/Kachow_Images/pexels-arina-krasnikova-6316538.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668619837677">
+        <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
+            <img class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer" src="https://ik.imagekit.io/liamallen34/Kachow_Images/pexels-arina-krasnikova-6316538.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668619837677">
             <h4 class="text-[25px] relative top-4 left-2 font-Bree">Mini Trees Special</h4>
             <p class="relative top-[10px] left-2 text-[20px]">$3 per</p>
+            <button class="relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
     </article>
 
@@ -120,5 +126,7 @@
     </footer>
 
 </section>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="./assets/js/script.js"></script>
 </body>
 </html>
