made a functioning, add to cart system

--- a/Seafood.html
+++ b/Seafood.html
@@ -40,7 +40,7 @@
         >Address<span class="relative left-[5px] bottom-[6px]">&#8964;</span></a
       >
       <button
-        class="absolute right-[100px] top-5 h-[35px] w-[80px] bg-white rounded-[30px] border-none"
+    class="cartBtn absolute right-[100px] top-5 h-[35px] w-[80px] bg-white rounded-[30px] border-none"
       >
         <span class="material-symbols-outlined relative top-0.5">
           shopping_cart
@@ -141,64 +141,64 @@
             class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer "
             src="https://ik.imagekit.io/tsoc7yrwg/oysters-on-the-half-shell-with-habanero-tomato-mignonette-91699-1.jpeg?ik-sdk-version=javascript-1.4.3&updatedAt=1668737782092"
           />
-          <h4 class="text-[25px] relative top-4 left-2 font-Bree">
+          <h4 class="foodName text-[25px] relative top-4 left-2 font-Bree">
             Oysters on the 1/2 Shell
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$48.99</p>
-          <button class="relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
+          <p id="48.99" class="relative top-[10px] left-2 text-[20px]">$48.99</p>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
           <img
             class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer "
             src="https://ik.imagekit.io/tsoc7yrwg/Lobster-Bisque.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668738220430"
           />
-          <h4 class="text-[25px] relative top-4 left-2 font-Bree">
+          <h4 class="foodName text-[25px] relative top-4 left-2 font-Bree">
             Lobster Bisque
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$31.99 8 OZ.</p>
-          <button class="relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
+          <p id="31.99"class="relative top-[10px] left-2 text-[20px]">$31.99 8 OZ.</p>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
           <img
             class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer "
             src="https://ik.imagekit.io/tsoc7yrwg/quick-pan-fried-tilapia-8.webp?ik-sdk-version=javascript-1.4.3&updatedAt=1668739190003"
           />
-          <h4 class="text-[25px] relative top-4 left-2 font-Bree">
+          <h4 class="foodName text-[25px] relative top-4 left-2 font-Bree">
             Tilapia Fillet
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$27.99 12OZ.</p>
-          <button class="relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
+          <p id="27.98"class="relative top-[10px] left-2 text-[20px]">$27.98 12OZ.</p>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
           <img
             class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer "
             src="https://ik.imagekit.io/tsoc7yrwg/bigstock-Traditional-barbecue-Italian-b-219791728.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668738223532"
           />
-          <h4 class="text-[25px] relative top-4 left-2 font-Bree">
+          <h4 class="foodName text-[25px] relative top-4 left-2 font-Bree">
             Black Mussels
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$36 lb</p>
-          <button class="relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
+          <p id="36.00" class="relative top-[10px] left-2 text-[20px]">$36 lb</p>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
           <img
             class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer "
             src="https://ik.imagekit.io/tsoc7yrwg/Nashville-green-hills-office-space-crawfish-virtual-office.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668738218508"
           />
-          <h4 class="text-[25px] relative top-4 left-2 font-Bree">Crawfish</h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$25 lb</p>
-          <button class="relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
+          <h4 class="foodName text-[25px] relative top-4 left-2 font-Bree">Crawfish</h4>
+          <p id="25.00" class="relative top-[10px] left-2 text-[20px]">$25 lb</p>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
         <div class="w-[450px] h-[400px] mx-auto rounded-xl transition transform hover:scale-110">
           <img
             class="w-[450px] h-[300px] shadow-info-grey shadow-lg rounded-xl hover:cursor-pointer "
             src="https://ik.imagekit.io/tsoc7yrwg/71fyzHAOcJL.jpg?ik-sdk-version=javascript-1.4.3&updatedAt=1668738878290"
           />
-          <h4 class="text-[25px] relative top-4 left-2 font-Bree">
+          <h4 class="foodName text-[25px] relative top-4 left-2 font-Bree">
             King Crab Legs
           </h4>
-          <p class="relative top-[10px] left-2 text-[20px]">$43 lb</p>
-          <button class="relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
+          <p id="43.00" class="relative top-[10px] left-2 text-[20px]">$43 lb</p>
+          <button class="addBtn relative left-[360px] bottom-[115px] bg-white px-4 py-1 rounded-3xl border-2 border-header-grey">Add</button>
         </div>
       </article>
       <footer class="absolute text-center h-[200px] mt-[75px] font-Bree w-full bg-[#1f1d1d] text-5xl">
