--- a/pizza.html
+++ b/pizza.html
@@ -19,13 +19,13 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20,400,1,0"
     />
     <link rel="stylesheet" href="./dist/output.css" />
-    <title>SPECIALTY PIZZAS</title>
+    <title>Papa Perry's Pizza</title>
   </head>
   <body>
     <header
       class="fixed flex top-0 w-full h-[75px] bg-header-grey border-b-2 border-off-white z-[1]"
     >
-      <a href="./index.html"
+      <a href="./main.html"
         ><h1
           class="font-Bree italic mt-[15px] mr-[75px] ml-[55px] text-white text-4xl"
         >
@@ -59,12 +59,12 @@
         class="inline-block relative top-[-118px] h-[100px] pt-[15px] pr-[15px] pl-[15px] bg-white rounded-xl ml-[11%] font-Roboto"
       >
         <h2 class="text-[200%] font-semibold relative top-[-4px]">
-          SPECIALTY PIZZAS
+          Papa Perry's Pizza 
         </h2>
         <p class="font-bold text-info-grey relative left-[-5px]">
-          Pizzas,Pasta,Oven-Baked Dips|2.0 mi|$$$ | 4.8
+          Pizza, Pasta, and more|2.0 mi|$$$ | 4.8
           <img
-            class="w-3 h-3 absolute bottom-[7px] right-[68px]"
+            class="w-3 h-3 absolute bottom-[7px] right-[-13px]"
             src="./assets/images/star-grey-th.png"
           />
         </p>
@@ -106,8 +106,9 @@
       <div
         class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md"
       >
-        <h5 class="text-[22px] font-Bree">Marylne U</h5>
+        <h5 class="text-[22px] font-Bree">Marylne U.</h5>
         <h6>
+          <span class="material-symbols-outlined"> grade </span>
           <span class="material-symbols-outlined"> grade </span>
           <span class="material-symbols-outlined"> grade </span>
           <span class="material-symbols-outlined"> grade </span>
@@ -120,10 +121,8 @@
       <div
         class="w-[30%] h-[150px] border-info-grey border-2 rounded-xl p-[10px] font-Roboto overflow-hidden shadow-info-grey shadow-md"
       >
-        <h5 class="text-[22px] font-Bree">Amani K</h5>
+        <h5 class="text-[22px] font-Bree">Amani K.</h5>
         <h6>
-          <span class="material-symbols-outlined"> grade </span>
-          <span class="material-symbols-outlined"> grade </span>
           <span class="material-symbols-outlined"> grade </span>
           <span class="material-symbols-outlined"> grade </span>
           <span class="material-symbols-outlined"> grade </span>
